--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vite-React Fresh Project</title>
   </head>
   <body>
+    <noscript>Please Enable JavaScript or Update your Browser :/</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
